Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16826

MDS nodes panicked running lfsck repair create lost objects: (osd_handler.c:6260:osd_index_declare_ea_insert()) ASSERTION( fid != ((void *)0) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Full stack tace is:

      [81891.829222] LustreError: 2384348:0:(osd_handler.c:6260:osd_index_declare_ea_insert()) ASSERTION( fid != ((void *)0) ) failed:
      [81891.842752] LustreError: 2384348:0:(osd_handler.c:6260:osd_index_declare_ea_insert()) LBUG
      [81891.851987] Pid: 2384348, comm: lfsck_namespace 4.18.0-305.10.2.x6.4.010.32.x86_64 #1 SMP Thu Apr 27 19:48:12 MDT 2023
      [81891.863654] Call Trace TBD:
      [81891.867456] [<0>] libcfs_call_trace+0x6f/0x90 [libcfs]
      [81891.873549] [<0>] lbug_with_loc+0x43/0x80 [libcfs]
      [81891.879328] [<0>] osd_index_declare_ea_insert+0x3d4/0x480 [osd_ldiskfs]
      [81891.886923] [<0>] lod_sub_declare_insert+0xef/0x240 [lod]
      [81891.893314] [<0>] lfsck_namespace_repair_dangling+0xe75/0x1370 [lfsck]
      [81891.900770] [<0>] lfsck_namespace_assistant_handler_p1+0x13b1/0x2020 [lfsck]
      [81891.908732] [<0>] lfsck_assistant_engine+0x359/0x1c20 [lfsck]
      [81891.915378] [<0>] kthread+0x116/0x130
      [81891.919931] [<0>] ret_from_fork+0x1f/0x40
      [81891.924807] Kernel panic - not syncing: LBUG
      [81891.929939] CPU: 24 PID: 2384348 Comm: lfsck_namespace Kdump: loaded Tainted: G           OE    --------- -  - 4.18.0-305.10.2.x6.4.010.32.x86_64 #1
      [81891.944936] Hardware name: Viking Enterprise Solutions VSSEP1EC/VSSEP1EC, BIOS RWH3LJ-10.07.00 08/29/2022
      [81891.955347] Call Trace:
      [81891.958645]  dump_stack+0x5c/0x80
      [81891.962787]  panic+0xe7/0x2a9
      [81891.966564]  ? ret_from_fork+0x1f/0x40
      [81891.971112]  lbug_with_loc.cold.10+0x18/0x18 [libcfs]
      [81891.976956]  osd_index_declare_ea_insert+0x3d4/0x480 [osd_ldiskfs]
      [81891.983914]  ? osd_index_declare_ea_delete+0x1cd/0x2f0 [osd_ldiskfs]
      [81891.991040]  lod_sub_declare_insert+0xef/0x240 [lod]
      [81891.996762]  lfsck_namespace_repair_dangling+0xe75/0x1370 [lfsck]
      [81892.003700]  ? dt_lookup_dir+0x80/0x190 [obdclass]
      [81892.009229]  lfsck_namespace_assistant_handler_p1+0x13b1/0x2020 [lfsck]
      [81892.016561]  ? __schedule+0x2cc/0x700
      [81892.020938]  lfsck_assistant_engine+0x359/0x1c20 [lfsck]
      [81892.026945]  ? __switch_to+0x10c/0x480
      [81892.031371]  ? __schedule+0x2cc/0x700
      [81892.035689]  ? finish_wait+0x80/0x80
      [81892.039917]  ? lfsck_master_engine+0xcd0/0xcd0 [lfsck]
      [81892.045680]  kthread+0x116/0x130
      [81892.049530]  ? kthread_flush_work_fn+0x10/0x10
      [81892.054580]  ret_from_fork+0x1f/0x40 

            zam Alexander Zarochentsev
            zam Alexander Zarochentsev
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: