LU-16826 lfsck: init rec_fid before declare_insert

lfsck_namespace_repair_dangling() doesn't init the record
buffer properly before calling dt_declare_insert() for the
case of local agent creation.

Test-parameters: trivial testlist=sanity-lfsck
HPE-bug-id: LUS-11609
Signed-off-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Change-Id: Ibd0a44217e9ebcf469f7a817651e63214c218974
Reviewed-by: Andrew Perepechko <andrew.perepechko@hpe.com>
Reviewed-by: Shaun Tancheff <stancheff@cray.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/50980
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>